--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,15 @@
     <string name="app_name">app_music</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+
+    <!-- Note -->
     <string name="noteTitle">Ghi chú QANDA</string>
+    <string name="back">Back</string>
+    <string-array name="spinnerNoteType">
+        <item>Ngày</item>
+        <item>Tên</item>
+        <item>Loại</item>
+    </string-array>
 </resources>
