--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,32 @@
     <string name="support">Support</string>
     <string name="notice">Notice</string>
     <string name="help">Help</string>
+    <string name="help_center">Help Center</string>
+    <string name="language">Language</string>
+    <string name="notifications">Notifications</string>
+    <string name="push_notification_settings">Push notification settings</string>
+    <string name="account">Account</string>
+    <string name="email">Email</string>
+    <string name="version">Version</string>
+    <string name="versionNumber">beta</string>
+    <string name="logout">Logout</string>
+    <string name="note_delete_account">You will lost all of your data and can\'t\nlogin this account</string>
+    <string name="delete_account">Delete Account</string>
+    <string name="my_profile">My profile</string>
+    <string name="change">Change</string>
+    <string name="username">Username</string>
+    <string name="status_message">Status message</string>
+    <string name="detail_status_message">I\'m hungry with my exercise</string>
+    <string name="student_information">Student Information</string>
+    <string name="detail_student_infomation">I\'m learning at grade fifthteen</string>
+    <string name="account_information">Account information</string>
+    <string name="mailOfUser">trinhvinhtuandat@gmail.com</string>
+    <string name="snap_solve_uid">Snap Solve UID</string>
+    <string name="user_id">axQ*skx</string>
+    <string name="linked_accounts">Linked accounts</string>
+    <string name="facebook">Facebook</string>
+    <string name="nameOfFacebookUser">maybetuandat</string>
+    <string name="setting">Setting</string>
     <string-array name="spinnerNoteType">
         <item>Ngày</item>
         <item>Tên</item>
