update new note and folder content

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="type">Type</string>
     <string name="folder">Folder</string>
     <string name="new_text">New</string>
+    <string name="rename">Rename</string>
+    <string name="delete">Delete</string>
 </resources>
