--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">Snap_Solve</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name" translatable="false">Snap_Solve</string>
+
+
 
 
     <!-- Note -->
-    <string name="noteTitle">Ghi chú QANDA</string>
+    <string name="noteTitle"> QANDA Notes</string>
     <string name="back">Back</string>
     <string name="nameOfScreenMenu">Menu</string>
     <string name="btnEdit">Edit</string>
@@ -74,8 +74,8 @@
     <string name="out_of_school">I\'m not attending school</string>
     <string name="btnComplete">Complete</string>
     <string-array name="spinnerNoteType">
-        <item>Ngày</item>
-        <item>Tên</item>
-        <item>Loại</item>
+        <item>Date</item>
+        <item>Name</item>
+        <item>Type</item>
     </string-array>
 </resources>
