--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -82,4 +82,19 @@
     <string name="language_change_restart_message">Ngôn ngữ đã được thay đổi. Để áp dụng thay đổi hoàn toàn, ứng dụng cần được khởi động lại.</string>
     <string name="restart_now">Khởi động lại ngay</string>
     <string name="restart_later">Để sau</string>
+
+        <!-- Community Posting -->
+        <string name="posting_title">Posting</string>
+        <string name="posting_choose_topic">Please choose a topic</string>
+        <string name="posting_hint_title">Enter title...</string>
+        <string name="posting_hint_content">Enter content...</string>
+        <string name="posting_add_image">Add Image</string>
+        <string name="posting_post">Post</string>
+        <string name="posting_select">Select</string>
+        <string name="posting_topic_header">Topic</string>
+
+        <!-- Topic Categories -->
+        <string name="topic_general">General Discussion</string>
+        <string name="topic_questions">Questions &amp; Answers</string>
+        <string name="topic_news">News &amp; Updates</string>
 </resources>
