--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -4,6 +4,14 @@
 
 
         <string name="noteTitle"> Ghi chú QANDA</string>
+        <string name="restart_required">Yêu cầu khởi động lại</string>
+        <string name="language_change_restart_message">Ngôn ngữ đã được thay đổi. Để áp dụng thay đổi hoàn toàn, ứng dụng cần được khởi động lại.</string>
+        <string name="restart_now">Khởi động lại ngay</string>
+        <string name="restart_later">Để sau</string>
+        <string name="change_language_title">Thay đổi ngôn ngữ</string>
+        <string name="change_language_message">Bạn có chắc chắn muốn thay đổi ngôn ngữ? Ứng dụng sẽ khởi động lại để áp dụng thay đổi.</string>
+        <string name="confirm">Xác nhận</string>
+        <string name="cancel">Hủy</string>
         <string name="back">Quay lại</string>
         <string name="nameOfScreenMenu">Menu</string>
         <string name="btnEdit">Chỉnh sửa</string>
@@ -76,10 +84,6 @@
             <item>Tên</item>
             <item>Loại</item>
         </string-array>
+        <string name="system_language">Ngôn ngữ hệ thống</string>
 
-
-    <string name="restart_required">Yêu cầu khởi động lại</string>
-    <string name="language_change_restart_message">Ngôn ngữ đã được thay đổi. Để áp dụng thay đổi hoàn toàn, ứng dụng cần được khởi động lại.</string>
-    <string name="restart_now">Khởi động lại ngay</string>
-    <string name="restart_later">Để sau</string>
 </resources>
