--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -86,4 +86,28 @@
         </string-array>
         <string name="system_language">Ngôn ngữ hệ thống</string>
 
+        <string name="login">Đăng nhập</string>
+        <string name="register">Đăng ký</string>
+        <string name="forgot_password">Quên mật khẩu?</string>
+        <string name="username_or_email">Tên đăng nhập hoặc Email</string>
+        <string name="password">Mật khẩu</string>
+        <string name="phone_number">Số điện thoại</string>
+        <string name="confirm_password">Xác nhận mật khẩu</string>
+        <string name="no_account">Chưa có tài khoản?</string>
+        <string name="register_now">Đăng ký ngay</string>
+        <string name="already_have_account">Đã có tài khoản?</string>
+        <string name="login_here">Đăng nhập tại đây</string>
+        <string name="create_account">Tạo tài khoản</string>
+        <string name="register_description">Vui lòng nhập thông tin để tạo tài khoản</string>
+        <string name="complete_profile">Hoàn tất hồ sơ</string>
+        <string name="complete_profile_description">Chỉ cần một vài thông tin nữa để cải thiện trải nghiệm của bạn</string>
+        <string name="first_name">Tên</string>
+        <string name="last_name">Họ</string>
+        <string name="date_of_birth">Ngày sinh</string>
+        <string name="date_format">YYYY-MM-DD</string>
+        <string name="continue_text">Tiếp tục</string>
+        <string name="remember_me">Ghi nhớ đăng nhập</string>
+        <string name="or">Hoặc</string>
+        <string name="sign_in_with_google">Đăng nhập với google</string>
+
 </resources>
