--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,22 @@
     <string name="grade_11">Grade 11</string>
     <string name="grade_12">Grade 12</string>
     <string name="grade_13">Grade 13</string>
+    <string name="up_load_file">Up load file</string>
+    <string name="create_new_note">Create new note</string>
+    <string name="create_new_folder">Create new folder</string>
+    <string name="camera">Camera</string>
+    <string name="scan">Scan</string>
+    <string name="day">Day</string>
+    <string name="name">Name</string>
+    <string name="type">Type</string>
+    <string name="folder">Folder</string>
+    <string name="new_text">New</string>
+    <string name="rename">Rename</string>
+    <string name="delete">Delete</string>
+    <string name="get_help">Get Help</string>
+    <string name="see_solve">Get Solve</string>
+    <string name="gethelp">Get Help</string>
+    <string name="xemgiaithich">See Solve</string>
     <string name="out_of_school">I\'m not attending school</string>
     <string name="btnComplete">Complete</string>
     <string-array name="spinnerNoteType">
