--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -130,4 +130,5 @@
         <string name="see_solve">Xem giải</string>
         <string name="gethelp">Xem trợ giúp</string>
         <string name="xemgiaithich">Xem giải</string>
+        <string name="share">Chia sẻ</string>
 </resources>
