--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,5 @@
     <string name="remember_me">Remember Me</string>
     <string name="or">OR</string>
     <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="share">Share</string>
 </resources>
