--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -4,9 +4,9 @@
         <string name="collaborators">Collaborators: </string>
         <string name="scan_qr_code">Quét mã QR</string>
         <string name="center_qr_code">Center the QR code in the frame to scan</string>
-        <string name="share_via_qr">Share via QR Code</string>
+        <string name="share_via_qr">Chia sẻ mã QR</string>
         <string name="scan_to_collaborate">Scan this QR code to collaborate on this note</string>
-        <string name="share_link">Share Link</string>
+        <string name="share_link">Chia sẻ Link</string>
         <string name="newbutton">Mới</string>
         <string name="noteTitle"> Ghi chú QANDA</string>
         <string name="restart_required">Yêu cầu khởi động lại</string>
@@ -131,4 +131,17 @@
         <string name="gethelp">Xem trợ giúp</string>
         <string name="xemgiaithich">Xem giải</string>
         <string name="share">Chia sẻ</string>
+
+        <string name="ask_snapsolve">Ask SnapSolve anything</string>
+        <string name="type_question">Type your question</string>
+        <string name="utilities">Utilities</string>
+        <string name="dictionary">Từ điển</string>
+        <string name="calculator">Máy tính</string>
+        <string name="entertainment">Giải trí</string>
+        <string name="today_missions">Today missions</string>
+        <string name="watch_ad">Xem quảng cáo</string>
+        <string name="ask_question">Đặt một câu hỏi</string>
+        <string name="points">+ 10</string>
+        <string name="open_missions">Open missions board</string>
+        <string name="tiktok">Tiktok</string>
 </resources>
