--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name" translatable="false">Snap_Solve</string>
 
     <string name="collaborators">Collaborators: </string>
-    <string name="scan_qr_code">Quét mã QR</string>
+    <string name="scan_qr_code">Scan QR</string>
     <string name="center_qr_code">Center the QR code in the frame to scan</string>
     <string name="share_via_qr">Share via QR Code</string>
     <string name="scan_to_collaborate">Scan this QR code to collaborate on this note</string>
@@ -132,4 +132,18 @@
     <string name="or">OR</string>
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="share">Share</string>
+
+
+    <string name="ask_snapsolve">Ask SnapSolve anything</string>
+    <string name="type_question">Type your question</string>
+    <string name="utilities">Utilities</string>
+    <string name="dictionary">Từ điển</string>
+    <string name="calculator">Máy tính</string>
+    <string name="entertainment">Giải trí</string>
+    <string name="today_missions">Today missions</string>
+    <string name="watch_ad">Xem quảng cáo</string>
+    <string name="ask_question">Đặt một câu hỏi</string>
+    <string name="points">+ 10</string>
+    <string name="open_missions">Open missions board</string>
+    <string name="tiktok">Tiktok</string>
 </resources>
