--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,6 +176,8 @@
     <string name="or">OR</string>
     <string name="sign_in_with_google">Sign in with Google</string>
 
+    <string name="see_more_searches">See More Searches</string>
+    <string name="ic_search_history">Search History</string>
     <string name="ask_snapsolve">Ask SnapSolve anything</string>
     <string name="type_question">Type your question</string>
     <string name="utilities">Utilities</string>
