--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -252,5 +252,9 @@
         <string name="yes">Có</string>
         <string name="no">Không</string>
 
+        <string name="notification_channel_name">SnapSolve Notifications</string>
+        <string name="notification_channel_description">Nhận thông báo từ SnapSolve</string>
+
+
 
 </resources>
